# reaserve

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  LICENSE  Makefile  PROTOCOL.md  README.md  reaper-plugin-bridge.md
.github/workflows/: build.yml  release.yml
WDL/swell/: swell.h
examples/: go_client.go  node_client.js  python_client.py
src/: command_queue.cpp  command_queue.h  command_registry.cpp  command_registry.h  config.cpp  config.h  json_rpc.cpp  json_rpc.h  main.cpp  platform.h  reaper_api.cpp  reaper_api.h  tcp_server.cpp  tcp_server.h  undo.cpp  undo.h  version.h.in
src/commands/: envelope.cpp  fx.cpp  items.cpp  lua.cpp  markers.cpp  midi.cpp  ping.cpp  project.cpp  routing.cpp  tracks.cpp  transport.cpp
tests/: test_command_queue.cpp  test_framing.cpp  test_json_rpc.cpp
tests/integration/: go.mod  reaserve_test.go  test_client.py
